# ghost-privacy

./: .env.example  .gitignore  .semgrepignore  ANTI_FORENSIC_PATTERNS.tsx  CODE_OF_CONDUCT.md  CONTRIBUTING.md  OTF-GRANT-OUTLINE.md  PR_SUMMARY.md  README.md  SECURITY.md  THREAT_MODEL_MAPPING.md  audit-results.json  capacitor.config.ts  create_function.sql  eslint.config.js  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.ts  test_log.txt  test_output.txt  tsconfig.security.json  tsconfig.typecheck.json  vite.config.ts  vitest.config.ts
android/: gradle.properties
auditor/: ANDROID_RELEASE.md  DESKTOP_RELEASE.md  ETHICS_OPTOUT.md  LAYER0_2_PARITY_AUDIT_REPORT.md  LAYER3_REPORT.md  PERFORMANCE_FORENSICS.md  README.md  REPRODUCIBLE_TESTS.md  SECURITY_CLAIMS_MATRIX.md  SECURITY_CONTROLS.md
audits/: FINAL_SECURITY_AUDIT.md  FINAL_SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_REPORT.md  SECURITY_HARDENING_REPORT.md
docs/: ARCHITECTURE.md  CERTIFICATE_PINNING.md  COMMUNITY.md  FORENSIC_CHALLENGE.md  INSTALL_GUIDE.md  RELEASE_VERIFICATION.md  THREAT_MODEL_MAPPING.md
patches/: @capacitor+cli+6.2.1.patch
public/: _headers  _redirects  cert_pins.json  manifest.json  sw.js
scripts/: bench_key_exchange.ts  bench_message_crypto.ts  bench_security.ts  lint-baseline.mjs  postinstall.cjs  reproducible-build.sh  stress_sessions.ts  verify_integrity.ts
src/: ANTI_FORENSIC_GUIDE_CODE.md  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
(+210 files in other folders)
