[package]
name = "app"
version = "0.1.27"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.82.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
aes-gcm = "0.10"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }
x509-parser = "0.16"

zeroize = "1.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_Security_WinTrust", "Win32_Security_Cryptography"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true
incremental = false
